# my-shoe-tracker

./: .env.example  IMPLEMENTATION.md  README.md  pyproject.toml  requirements.txt  run.py
examples/: basic_usage.py
shoe_tracker/: __init__.py  analyzer.py  app.py  cli.py  strava_client.py
shoe_tracker/templates/: base.html  index.html  report.html
